[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-exif"
version = "0.1.0"
description = "ExifTool MCP Server — expose ExifTool as an MCP tool for Claude and other AI clients"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyexiftool>=0.5.6",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-exif = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
